Conclusão das listas de exercícios 4 e 5

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@react-native-picker/picker": "^2.11.3",
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.0.0",
-    "expo-constants": "^18.0.9",
+    "expo": "^54.0.20",
+    "expo-constants": "^18.0.10",
     "expo-contacts": "~15.0.9",
     "expo-image-picker": "~17.0.8",
     "react": "^19.2.0",
