--- a/App_Scholar/backend/package.json
+++ b/App_Scholar/backend/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.15.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
