--- a/App_Scholar/frontend/tsconfig.json
+++ b/App_Scholar/frontend/tsconfig.json
@@ -1,11 +1,27 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2019", "DOM"],
-    "jsx": "react",
+    "target": "esnext",
+    "lib": [
+      "esnext"
+    ],
+    "jsx": "react-native",
     "moduleResolution": "node",
+    "allowJs": true,
+    "esModuleInterop": true,
     "strict": true,
+    "noEmit": true,
+    "isolatedModules": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] }
-  }
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "extends": "expo/tsconfig.base"
 }
