--- a/App_Scholar/frontend/tsconfig.json
+++ b/App_Scholar/frontend/tsconfig.json
@@ -5,7 +5,7 @@
       "esnext"
     ],
     "jsx": "react-native",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowJs": true,
     "esModuleInterop": true,
     "strict": true,
