--- a/App_Scholar/frontend/package.json
+++ b/App_Scholar/frontend/package.json
@@ -13,19 +13,14 @@
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/drawer": "^6.6.15",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.25",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.2",
-    "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "^0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.10"
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.79",
