--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.3",
-    "@react-navigation/native": "^6.0.0",
-    "@react-navigation/native-stack": "^6.0.0",
+    "@react-navigation/drawer": "^7.7.2",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.1.1",
+    "axios": "^1.13.2",
     "expo": "^54.0.20",
     "expo-constants": "^18.0.10",
     "expo-contacts": "~15.0.9",
@@ -14,8 +18,10 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-native": "^0.82.1",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.16.0",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
