--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-navigation/drawer": "^7.7.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.1.1",
+    "@react-navigation/stack": "^7.6.4",
     "axios": "^1.13.2",
     "expo": "^54.0.20",
     "expo-constants": "^18.0.10",
